deploy/k8s/account.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app: account
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      volumes:
        - name: config
          configMap:
            name: admin-server-config
      containers:
        - name: account
          image: account
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: account-port
          volumeMounts:
            - name: "config"
              mountPath: "/usr/bin/server/data/config/"
