deploy/k8s/transfer.yaml
apiVersion: v1
kind: Service
metadata:
  name: transfer
  labels:
    app: transfer
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: transfer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: transfer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer
  template:
    metadata:
      labels:
        app: transfer
    spec:
      volumes:
        - name: config
          configMap:
            name: admin-server-config
        - name: file
          hostPath:
            path: /e//Coding/k8s/admin-server-data
            type: Directory
      containers:
        - name: transfer
          image: transfer
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: transfer-port
          volumeMounts:
            - name: "config"
              mountPath: "/usr/bin/server/data/config/"
            - name: "file"
              mountPath: "/usr/bin/server/data/file"
